fix: adjust the header spacing and logo redirection

--- a/projeto-angular-pizzaria/src/app/header/header.css
+++ b/projeto-angular-pizzaria/src/app/header/header.css
@@ -2,7 +2,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 350px;
+  padding: 0.2% 15%;
   background: linear-gradient(#009246, #004f26);
   width: 100%;
   top: 0;
@@ -24,6 +24,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  text-decoration: none;
 }
 
 .logo-area img {
